--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="lead mb-5">
               Depuis mes débuts dans le domaine de l'IT depuis les années
               2000,<br />
-              l'évolution technologique et infomatique a eu une croissance
+              l'évolution technologique et informatique a eu une croissance
               exponentielle !
             </p>
           </div>
@@ -92,6 +92,7 @@
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">Compétences</h3>
           <h2 class="mb-5">Offres de services</h2>
+          <h4 class="text-secondary mb-6">CV sur demande</h4>
         </div>
         <div class="row gx-5 gx-lg-6">
           <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
@@ -188,11 +189,8 @@
             <a class="portfolio-item" href="#!">
               <div class="caption">
                 <div class="caption-content">
-                  <div class="h2">Strawberries</div>
-                  <p class="mb-0">
-                    Strawberries are such a tasty snack, especially with a
-                    little sugar on top!
-                  </p>
+                  <div class="h2">CNAM</div>
+                  <p class="mb-0">...</p>
                 </div>
               </div>
             </a>
@@ -201,11 +199,8 @@
             <a class="portfolio-item" href="#!">
               <div class="caption">
                 <div class="caption-content">
-                  <div class="h2">Workspace</div>
-                  <p class="mb-0">
-                    A yellow workspace with some scissors, pencils, and other
-                    objects.
-                  </p>
+                  <div class="h2">La Salle</div>
+                  <p class="mb-0">...</p>
                 </div>
               </div>
             </a>
